--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--Contenuto delle pagine-->
         <div id="contenuto">
             <br/>
-            <img src="img/nativita.gif" />
+            <img src="img/nativita.gif" width="100%" />
             <div id="re_magi"></div>
         </div>
     </div>
